# Spot-Price-Tracker

./: README.md
.github/workflows/: deploy_backend.yaml  deploy_frontend.yaml
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml  start_docker_db.sh
backend/alembic/: env.py
backend/alembic/versions/: 2cc80628e424_add_current_spot_instance_prices_table.py  74d68cdb7f6e_initial_schema.py  750d1fb71722_add_current_prices_indexes.py  c96821e519c3_add_cores_column_to_instance_types.py  d5856c32131f_initial_migration.py
backend/spot_price_tracker/: aws.py  main.py
backend/spot_price_tracker/api/: requests.py  responses.py  web.py
backend/spot_price_tracker/db/: db.py  models.py
backend/tests/: conftest.py
frontend/: Dockerfile  openapi-ts.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/: app.css  hooks.server.ts
frontend/src/lib/: filterState.ts
frontend/src/lib/api-client/: sdk.gen.ts  types.gen.ts
frontend/src/lib/components/: Controls.svelte  FilterSection.svelte  InstanceSelect.svelte  MultiSelect.svelte  SortIndicator.svelte
frontend/src/routes/: +layout.ts  +page.svelte  +page.ts
infra/base/: api_deployment.yaml  backend_deployment.yaml  data_update_cron.yaml  fe_deployment.yaml  fe_route.yaml  kustomization.yaml
infra/overlays/minikube/: api_deployment.yaml  backend_deployment.yaml  fe_deployment.yaml  kustomization.yaml  namespace.yaml  timescaledb.yaml
infra/overlays/prod/: backend-database-url-sealed-secret.yaml  backend_deployment.yaml  data_update_cron.yaml  db-admin-sealed-secret.yaml  fe_deployment.yaml  ing.yaml  kustomization.yaml  origin-cert.yaml  timescaledb.yaml
