[tool.poetry]
name = "spotpricetracker"
version = "0.1.0"
description = "Backend for spotpricetracker.com, responsible for fetching/updating the data and presenting an API for querying the dataset"
authors = ["B1tWhys <skyarnold1@me.com>"]
readme = "README.md"
# packages = [{ include = "spotpricetracker", from="src"}]

[tool.poetry.dependencies]
python = "^3.13"
boto3 = "^1.35.81"

[tool.poetry.group.dev.dependencies]
black = { extras = ["d"], version = "^24.4.2" }
flake8 = "^7.1.0"
pytest-cov = "^5.0.0"
# https://github.com/psf/black/issues/1928#issuecomment-910337314
typing-extensions = "^4.12.2"
commitizen = "^3.27.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.2"
tag_format = "$version"
version_files = [
    "pyproject.toml:^version"
]
bump_message = "bump: version $current_version → $new_version [skip ci]"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py313"]
include = ".*\\.py"
