[tool.poetry]
name = "spot_price_tracker"
version = "0.1.0"
description = "Backend for spotpricetracker.com, responsible for fetching/updating the data and presenting an API for querying the dataset"
authors = ["B1tWhys <skyarnold1@me.com>"]
readme = "README.md"
packages = [{ include = "spot_price_tracker" }]


[tool.poetry.dependencies]
python = "^3.13"
boto3 = "^1.35.81"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
psycopg = "^3.2.3"
typer = "^0.15.1"
alembic = "^1.14.0"
pydantic = "^2.10.3"
uvicorn = "^0.33.0"

[tool.poetry.group.dev.dependencies]
black = { extras = ["d"], version = "^24.4.2" }
flake8 = "^7.1.0"
pytest-cov = "^5.0.0"
commitizen = "^3.27.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.2"
tag_format = "$version"
version_files = [
    "pyproject.toml:^version"
]
bump_message = "bump: version $current_version → $new_version [skip ci]"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py313"]
include = ".*\\.py"
